--- a/notes.css
+++ b/notes.css
@@ -13,16 +13,15 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
-    height: 80vh;
-    width: 70vw;
+    margin: 3em;
+    min-height: 80vh;
+    width: clamp(3em, 40em, 100vw);
     border: 2px solid black;
     background-color: ivory;
 }
 
 .title{
-    height: 15%;
+    height: 3em;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,7 +29,7 @@ body{
 }
 
 .new-note{
-    height: 15%;
+    height: 3em;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -51,14 +50,14 @@ body{
     background-color: #2055DA;
     color: white;
     font-weight: 700;
-    font-size: 1.2rem;
+    font-size: clamp(0.7rem, 0.8rem + 1vw, 2rem);
     border-radius: .2em;
     margin-left: 1em;
 }
 
 .notes{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 1em;
     margin: 1em;
 }
@@ -67,8 +66,8 @@ body{
     border-radius: 1em;
     padding: 1em;
     color: black;
-    width: 100%;
     height: clamp(2em, 100%, 8em);
+    min-width: 7em;
     background-color: goldenrod;
     display: flex;
     flex-direction: column;
@@ -119,17 +118,24 @@ body{
 
 #modal-div{
     background-color: white;
+    position: relative;
     margin: auto;
     padding: 2em;
     width: 60%;
 }
 
+@media (max-width: 600px){
+    #modal-div{
+        width: 100%;
+    }
+}
 .close{
     color: #aaaaaa;
-    float: right;
+    position: absolute;
+    top: 5px; 
+    right: 7px;
     font-size: 28px;
     font-weight: bold;
-    margin: -1.5em -0.8em;
     cursor: pointer;
 }
 
